finalized tests for boardGameItem service layer